upload img successfully

--- a/.env
+++ b/.env
@@ -15,8 +15,7 @@ SENDER_EMAIL_ADDRESS = sneakersloop78@gmail.com
 
 CLOUD_NAME = dn6ulsxxf
 CLOUD_API_KEY = 385953646322129
-CLOUD_API_KEY = 385953646322129
-CLOUD_API_SECRET = GS9aehCkRMFXXr6o-4fvlg5uL58
+CLOUD_API_SECRETS = GS9aehCkRMFXXr6o-4fvlg5uL58
     
 GOOGLE_SECRET = Wja:Y~/T%rVRr4}5^X2WJ}^Nac,7K;L#^'Wp=-54k;+:ZPgw+t
 FACEBOOK_SECRET = #H4)vDhyzvry$*v*c8qq$qu3h7!j&B`Gj=/Rq;*2S*bpVG6+f`
