--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
@@ -47,5 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
+  }
 }
